# ai-leetcode

./: README.md  ai-system-domain-capabilities.md  pyproject.toml
p_equals_np/: ANALYSIS.md  README.md  __init__.py  brute_force.py  complexity_analysis.py  definitions.py  dpll.py  sat_generator.py  sat_types.py
p_equals_np/experimental/: __init__.py  algebraic_approach.py  geometric_approach.py  spectral_approach.py  structural_approach.py
p_equals_np/tests/: __init__.py  conftest.py  test_brute_force.py  test_complexity.py  test_cross_validation.py  test_definitions.py  test_dpll.py  test_experimental.py  test_sat_types.py
sudoku_solver/: README.md  __init__.py  __main__.py  cli.py  constraint_mapper.py  dlx_matrix.py  dlx_node.py  metrics.py  solution_decoder.py  solver.py  validator.py
sudoku_solver/tests/: conftest.py  test_constraint_mapper.py  test_dlx_matrix.py  test_dlx_node.py  test_edge_cases.py  test_integration.py  test_performance.py  test_solution_decoder.py  test_solver.py  test_validator.py
