[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "sudoku-solver"
version = "1.0.0"
description = "Sudoku solver using Dancing Links (DLX) / Algorithm X"
requires-python = ">=3.10"

[project.scripts]
sudoku-solver = "sudoku_solver.cli:main"

[tool.pytest.ini_options]
testpaths = ["sudoku_solver/tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.ruff.lint.per-file-ignores]
"sudoku_solver/tests/*" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["sudoku_solver"]
